Setting up basic blog structure.

--- a/_posts/2014-04-19-Activiti-5.x-Business-Process-Management-Beginners-Guide.md
+++ b/_posts/2014-04-19-Activiti-5.x-Business-Process-Management-Beginners-Guide.md
@@ -2,6 +2,11 @@
 layout: post
 title: Activiti 5.x Business Process Management Beginner's Guide review
 tags: [activiti, bpm]
+links: 
+ - link: https://plus.google.com/+TieseBarrell/posts/VxUX26Jp34d
+   name: Review on Google+
+ - link: http://www.amazon.com/review/R1MIQ86475BYUO/ref=cm_cr_dp_title?ie=UTF8&ASIN=1849517061&channel=detail-glance&nodeID=283155&store=books
+   name: Review on Amazon.com
 ---
 
 I was asked by [Packt](http://packtpub.com/ "Visit the PacktPub website") to review their newly published book [Activiti 5.x Business Process Management Beginner’s Guide](http://www.packtpub.com/activiti-bpm-beginners-guide/book/ "Book website"). Authored by Dr. Zakir Laliwala and Irshad Mansuri, the book aims - as the title suggests - to provide those new to Activiti a starting point for learning to use the framework. In that sense, this book is a welcome addition to Tijs’ [Activiti in Action](http://manning.com/rademakers2/) book and the already quite excellent [user guide](http://activiti.org/userguide "Activiti User Guide") provided with the framework and maintained by the team and community.
