Updated permalink structure.

--- a/_posts/2014-04-19-Activiti-5.x-Business-Process-Management-Beginners-Guide.md
+++ b/_posts/2014-04-19-Activiti-5.x-Business-Process-Management-Beginners-Guide.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: Activiti 5.x Business Process Management Beginner's Guide review
+redirect_from:
+ - /2014/04/19/Activiti-5.x-Business-Process-Management-Beginners-Guide.html
 tags: [activiti, bpm]
 links: 
  - link: https://plus.google.com/+TieseBarrell/posts/VxUX26Jp34d
